--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<span></span>
 			<span></span>
 		</button>
-		<a href="index.html" class="logo"><img src="https://via.placeholder.com/70x70" alt="Bako Doe" /></a>
-		<a href="index.html" class="site-title dot ml-2">Bako Doe</a>
+		<a href="index.html" class="logo"><img src="https://via.placeholder.com/70x70" alt="Pranay Sarkar" /></a>
+		<a href="index.html" class="site-title dot ml-2">Pranay Sarkar</a>
 	</div>
 
 	<!-- header -->
@@ -56,8 +56,8 @@
 			<span aria-hidden="true">&times;</span>
 		</button>
 		<div class="header-inner d-flex align-items-start flex-column">
-			<a href="index.html"><img src="https://via.placeholder.com/70x70" alt="Bako Doe" /></a>
-			<a href="index.html" class="site-title dot mt-3">Bako Doe</a>
+			<a href="index.html"><img src="https://via.placeholder.com/70x70" alt="Pranay Sarkar" /></a>
+			<a href="index.html" class="site-title dot mt-3">Pranay Sarkar</a>
 			<span class="site-slogan">Web Developer</span>
 			
 			<!-- navigation menu -->
@@ -97,7 +97,7 @@
 		<!-- section hero -->
 		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="https://via.placeholder.com/900x600">
 			<div class="cta mx-auto mt-2">
-				<h1 class="mt-0 mb-4">I’m Bako Doe<span class="dot"></span></h1>
+				<h1 class="mt-0 mb-4">I’m Pranay Sarkar<span class="dot"></span></h1>
 				<p class="mb-4">He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
 				<a href="#" class="btn btn-default btn-lg mr-3"><i class="icon-grid"></i>View Portfolio</a>
 				<div class="spacer d-md-none d-lg-none d-sm-none" data-height="10"></div>
@@ -117,10 +117,10 @@
 				</div>
 				<div class="col-md-9">
 					<h2 class="mt-4 mt-md-0 mb-4">Hello,</h2>
-					<p class="mb-0">I am Bako Doe, web developer from London, United Kingdom. I have rich experience in web site design and building and customization, also I am good at wordpress.</p>
+					<p class="mb-0">I am Pranay Sarkar, web developer from London, United Kingdom. I have rich experience in web site design and building and customization, also I am good at wordpress.</p>
 					<div class="row my-4">
 						<div class="col-md-6">
-							<p class="mb-2">Name: <span class="text-dark">Bako Doe</span></p>
+							<p class="mb-2">Name: <span class="text-dark">Pranay Sarkar</span></p>
 							<p class="mb-0">Birthday: <span class="text-dark">14 August, 1990</span></p>
 						</div>
 						<div class="col-md-6 mt-2 mt-md-0 mt-sm-2">
@@ -699,7 +699,7 @@
 						<h4 class="mt-4 mb-0"><a href="#">The Truth About Design In 3 Minutes</a></h4>
 						<ul class="list-inline meta mb-0 mt-3">
 							<li class="list-inline-item">13 March, 2019</li>
-							<li class="list-inline-item">Bako Doe</li>
+							<li class="list-inline-item">Pranay Sarkar</li>
 						</ul>
 					</div>
 				</div>
@@ -718,7 +718,7 @@
 						<h4 class="mt-4 mb-0"><a href="#">The Ugly Truth About Design</a></h4>
 						<ul class="list-inline meta mb-0 mt-3">
 							<li class="list-inline-item">13 March, 2019</li>
-							<li class="list-inline-item">Bako Doe</li>
+							<li class="list-inline-item">Pranay Sarkar</li>
 						</ul>
 					</div>
 				</div>
@@ -737,7 +737,7 @@
 						<h4 class="mt-4 mb-0"><a href="#">How To Become Better With UI Design</a></h4>
 						<ul class="list-inline meta mb-0 mt-3">
 							<li class="list-inline-item">13 March, 2019</li>
-							<li class="list-inline-item">Bako Doe</li>
+							<li class="list-inline-item">Pranay Sarkar</li>
 						</ul>
 					</div>
 				</div>
