--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="header-inner d-flex align-items-start flex-column">
 			<a href="index.html"><img src="https://via.placeholder.com/70x70" alt="Pranay Sarkar" /></a>
 			<a href="index.html" class="site-title dot mt-3">Pranay Sarkar</a>
-			<span class="site-slogan">Web Developer</span>
+			<span class="site-slogan">PGDM Finance + BA</span>
 			
 			<!-- navigation menu -->
 			<nav>
