--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<span></span>
 			<span></span>
 		</button>
-		<a href="index.html" class="logo"><img src="https://via.placeholder.com/70x70" alt="Pranay Sarkar" /></a>
+		<a href="index.html" class="logo"><img src="images/profile7070.jpg" alt="Pranay Sarkar" /></a>
 		<a href="index.html" class="site-title dot ml-2">Pranay Sarkar</a>
 	</div>
 
@@ -56,7 +56,7 @@
 			<span aria-hidden="true">&times;</span>
 		</button>
 		<div class="header-inner d-flex align-items-start flex-column">
-			<a href="index.html"><img src="https://via.placeholder.com/70x70" alt="Pranay Sarkar" /></a>
+			<a href="index.html"><img src="images/profile7070.jpg" alt="Pranay Sarkar" /></a>
 			<a href="index.html" class="site-title dot mt-3">Pranay Sarkar</a>
 			<span class="site-slogan">PGDM Finance + BA</span>
 			
@@ -92,7 +92,7 @@
 	<main class="content float-right">
 
 		<!-- section hero -->
-		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="https://via.placeholder.com/900x600">
+		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="images/ndim.jpg">
 			<div class="cta mx-auto mt-2">
 				<h1 class="mt-0 mb-4">I’m Pranay Sarkar<span class="dot"></span></h1>
 				<p class="mb-4">He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
