--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<span></span>
 			<span></span>
 		</button>
-		<a href="index.html" class="logo"><img src="images/profile7070.jpg" alt="Pranay Sarkar" /></a>
+		<a href="index.html" class="logo"><img src="images/ps7070.png" alt="Pranay Sarkar" /></a>
 		<a href="index.html" class="site-title dot ml-2">Pranay Sarkar</a>
 	</div>
 
@@ -56,7 +56,7 @@
 			<span aria-hidden="true">&times;</span>
 		</button>
 		<div class="header-inner d-flex align-items-start flex-column">
-			<a href="index.html"><img src="images/profile7070.jpg" alt="Pranay Sarkar" /></a>
+			<a href="index.html"><img src="images/ps7070.png" alt="Pranay Sarkar" /></a>
 			<a href="index.html" class="site-title dot mt-3">Pranay Sarkar</a>
 			<span class="site-slogan">PGDM Finance + BA</span>
 			
