--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<main class="content float-right">
 
 		<!-- section hero -->
-		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="images/ndim.jpg">
+		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="images/bg900600.png">
 			<div class="cta mx-auto mt-2">
 				<h1 class="mt-0 mb-4">I’m Pranay Sarkar<span class="dot"></span></h1>
 				<p class="mb-4">He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
