--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="images/bg900600.png">
 			<div class="cta mx-auto mt-2">
 				<h1 class="mt-0 mb-4">I’m Pranay Sarkar<span class="dot"></span></h1>
-				<p class="mb-4">A BCA graduate getting into management, improving finance & analytical skills to get a happy job.</p>
+				<p class="mb-4">A BCA graduate getting into management, improving finance & analytical skills to make a happy career.</p>
 				<a href="#" class="btn btn-default btn-lg mr-3"><i class="icon-grid"></i>View Portfolio</a>
 				<div class="spacer d-md-none d-lg-none d-sm-none" data-height="10"></div>
 				<a href="mailto:psarkar110@gmail.com" class="btn btn-border-light btn-lg"><i class="icon-envelope"></i>Hire me</a>
