--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<p class="mb-0">Email: <span class="text-dark">hello@bako.com</span></p>
 						</div>
 					</div>
-					<a href="#" class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download CV</a>
+					<a href="doc/Pranay_Sarkar_Resume.pdf" target="_blank" class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download CV</a>
 					<a href="#" class="btn btn-alt mt-2 mt-md-0 mt-xs-2"><i class="icon-envelope"></i>Hire me</a>
 				</div>
 			</div>
