--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<h3 class="section-title">Technical skills</h3>
 			<div class="spacer" data-height="80"></div>
 			
-			<p class="mb-0">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+			<p class="mb-0">.</p>
 
 			<div class="row mt-5">
 
