--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-globe icon-simple"></i>
-						<h4 class="my-3">Development</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<h4 class="my-3">Quizicca</h4>
+						<p class="mb-0">Won 1st prize at AI/ML quize event at NDIM,Delhi.</p>
 					</div>
 					<div class="spacer" data-height="20"></div>
 				</div>
@@ -331,8 +331,8 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-chemistry icon-simple"></i>
-						<h4 class="my-3">Design</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<h4 class="my-3">Tank Automator</h4>
+						<p class="mb-0">Successfully completed IOT based project.</p>
 					</div>
 					<div class="spacer" data-height="20"></div>
 				</div>
@@ -341,8 +341,8 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-directions icon-simple"></i>
-						<h4 class="my-3">Advertising</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<h4 class="my-3">Consensio</h4>
+						<p class="mb-0">Won 1st prize at Machanical event by RGU, Guwahati.</p>
 					</div>
 					<div class="spacer" data-height="20"></div>
 				</div>
@@ -351,7 +351,7 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-rocket icon-simple"></i>
-						<h4 class="my-3">SEO</h4>
+						<h4 class="my-3">Summer School</h4>
 						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="20"></div>
@@ -381,65 +381,7 @@
 		
 
 		<!-- section testimonials -->
-		<section id="testimonials" class="shadow-blue white-bg padding">
-			<h3 class="section-title">Testimonials</h3>
-			<div class="spacer" data-height="97"></div>
-
-			<div class="row testimonials-wrapper">
-				
-				<div class="col-md-6">
-					<!-- testimonial item -->
-					<div class="testimonial-item">
-						<span class="symbol"><i class="fas fa-quote-left"></i></span>
-						<p>I enjoy working with the theme and learn so much. You guys make the process fun and interesting. Good luck!</p>
-						<div class="testimonial-details">
-							<div class="thumb">
-								<img src="https://via.placeholder.com/40x40" alt="customer-name" />
-							</div>
-							<div class="info">
-								<h4>Helen Doe</h4>
-								<span>Themeforest customer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<!-- testimonial item -->
-					<div class="testimonial-item">
-						<span class="symbol"><i class="fas fa-quote-left"></i></span>
-						<p>I enjoy working with the theme and learn so much. You guys make the process fun and interesting. Good luck!</p>
-						<div class="testimonial-details">
-							<div class="thumb">
-								<img src="https://via.placeholder.com/40x40" alt="customer-name" />
-							</div>
-							<div class="info">
-								<h4>Jane Doe</h4>
-								<span>Themeforest customer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<!-- testimonial item -->
-					<div class="testimonial-item">
-						<span class="symbol"><i class="fas fa-quote-left"></i></span>
-						<p>I enjoy working with the theme and learn so much. You guys make the process fun and interesting. Good luck!</p>
-						<div class="testimonial-details">
-							<div class="thumb">
-								<img src="https://via.placeholder.com/40x40" alt="customer-name" />
-							</div>
-							<div class="info">
-								<h4>Helen Doe</h4>
-								<span>Themeforest customer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</section>
+		
 
 		<!-- section clients -->
 		
