--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
 			</div>
 		</section>
 
-		<!-- section facts -->
+		<!-- section facts 
 		<section id="facts" class="shadow-dark color-white background parallax padding-50" data-image-src="images/background-1.jpg">
 
 			<div class="row relative z-1">
 				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
+					
 					<div class="fact-item text-center">
 						<i class="icon-like icon-circle"></i>
 						<h2 class="count">1</h2>
@@ -215,7 +215,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
+			
 					<div class="fact-item text-center">
 						<i class="icon-cup icon-circle"></i>
 						<h2 class="count">2765</h2>
@@ -223,7 +223,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
+				
 					<div class="fact-item text-center">
 						<i class="icon-emotsmile icon-circle"></i>
 						<h2 class="count">350</h2>
@@ -231,7 +231,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
+	
 					<div class="fact-item text-center">
 						<i class="icon-trophy icon-circle"></i>
 						<h2 class="count">29</h2>
@@ -241,9 +241,8 @@
 			</div>
 			
 			<div class="overlay"></div>
-
 		</section>
-
+		-->
 
 
 		<!-- section experience -->
