--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					<div class="service-item text-center">
 						<i class="icon-rocket icon-simple"></i>
 						<h4 class="my-3">Summer School</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<p class="mb-0">Trained class 10 students about IOT at RGU, Guwahati.</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="20"></div>
 				</div>
@@ -360,8 +360,8 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-note icon-simple"></i>
-						<h4 class="my-3">Copy Write</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<h4 class="my-3">Android Coding</h4>
+						<p class="mb-0">Completed android app development workshop by IIT,Guwahati .</p>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="20"></div>
 				</div>
@@ -370,8 +370,8 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-bubbles icon-simple"></i>
-						<h4 class="my-3">Support</h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p>
+						<h4 class="my-3">PSOFTDIGITAL</h4>
+						<p class="mb-0">Worked as a tech support and solved tech issues.</p>
 					</div>
 				</div>
 
